syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.congthanh.inventoryservice.grpc";

service InventoryService {
  rpc GetInventoryByProduct (InventoryRequest) returns (InventoryResponse) {}
}

message Inventory {
  int64 id = 1;
  string sku = 2;
  int64 stock = 3;
}

message InventoryRequest {
  string sku = 1;
}

message InventoryResponse {
  int64 id = 1;
  string sku = 2;
  int64 stock = 3;
}
